--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -5,7 +5,7 @@
             <div class="parameter-operation-row" ng-repeat="operator in parameter.operations">
                 <div class="parameter-key"><span ng-if="$index == 0">{{parameter.name}}</span></div>
                 <div class="parameter-operator">{{operator.operator}}</div>
-                <div class="parameter-value"><input ng-model="operator.value" ng-change="editParameter(parameter.name, operator.operatorer, operator.value)"></div>
+                <div class="parameter-value"><input ng-model="operator.value" ng-change="editParameter(parameter.name, operator.operatorer, operator.value)" class="ng-input-focus"></div>
             </div>
         </div>
     </div>
@@ -16,7 +16,7 @@
             <div class="parameter-operation-row" ng-repeat="operator in parameter.operations">
                 <div class="parameter-key"><span ng-if="$index == 0">{{parameter.name}}</span></div>
                 <div class="parameter-operator">{{operator.operator}}</div>
-                <div class="parameter-value"><input ng-model="operator.value" ng-change="editParameter(parameter.name, operator.operatorer, operator.value)"></div>
+                <div class="parameter-value"><input ng-model="operator.value" ng-change="editParameter(parameter.name, operator.operatorer, operator.value)" class="ng-input-focus"></div>
             </div>
         </div>
     </div>
