--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -17,8 +17,8 @@
                 <div class="parameter-key"><span ng-if="$index == 0">{{parameter.name}}</span></div>
                 <div class="parameter-operator">{{operator.operator}}</div>
                 <div class="parameter-value">
-                    <input ng-model="operator.low" ng-change="editParameter(parameter.name, operator.operatorer, operator.value)" class="ng-input-focus">
-                    <input ng-if="operator.range" ng-model="operator.high" class="ng-input-focus">
+                    <input ng-model="operator.low" ng-blur="editParameter(parameter, operator)" class="ng-input-focus">
+                    <input ng-if="operator.range" ng-model="operator.high" ng-blur="editParameter(parameter, operator)" class="ng-input-focus">
                 </div>
             </div>
             <div class="parameter-operation-row" ng-if="hasInheritance(parameter.name)">
