#337 update size rope (+ several other small stuff)

--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -3,11 +3,11 @@
         <b>Masters</b>
     </div>
     <div class="lm-body" ng-if="data.localmenu.masters">
-        <div class="lm-button" ng-mouseup="importUfo()">Import ufo...</div>
+        <div class="lm-button" ng-mouseup="importUfo()">Import ufo…</div>
         <div class="lm-divider"></div>
         <div class="lm-button" ng-mouseup="duplicateMaster()">Duplicate</div>
         <div class="lm-divider"></div>
-        <div class="lm-button" ng-mouseup="deleteMaster()">Delete...</div>
+        <div class="lm-button" ng-mouseup="deleteMaster()">Delete…</div>
     </div>
 </localmenu>
 
@@ -18,7 +18,7 @@
                 <span class="list-sequence-col" ng-class="{start : $first && !$last, end : $last, middle : $middle, solo : $first && $last}" ng-mouseover="whileDrag(master, $index)" ng-mousedown="startDrag(master, $index)">
                     <div class="diamond"></div>
                 </span>
-                <span class="list-view-col rename" ng-model="master.ag" ng-click="master.display = !master.display" ng-class="{'selected': master.display}" style="font-family:'{{master.fontFamily}}'; font-weight:{{master.weight}};"></span>
+                <span class="list-view-col rename" ng-model="master.ag" ng-click="toggleDisplay(master)" ng-class="{'selected': master.display}" style="font-family:'{{master.fontFamily}}'; font-weight:{{master.weight}};"></span>
                 <span class="list-edit-col rename" ng-model="master.name" ng-class="{'selected': master.edit}"></span>
             </li>
         </ul>
@@ -31,8 +31,5 @@
     </div>
     <div id="duplicate-master" ng-click="duplicateMaster();" class="master-tool">
         <img src="img/duplicateMaster.png">
-    </div>
-    <div id="delete-master" ng-click="cloneMaster();" class="master-tool">
-        <img src="img/cloneMaster.png">
     </div>
 </div>
