--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -95,11 +95,10 @@
 		}
 	
 		#view-buttons {
-		    position: absolute;
+		    position: fixed;
 		    top: 0;
-		    left: calc(50% - 50px);
-			float: left;
-			width: 300px;
+		    left: calc(50% - 113px);
+			width: 226px;
 			padding: 8px;
 		}
 		
@@ -1190,8 +1189,8 @@
             margin-left: 2px;
         }
         
-        .lm-head:hover:after {
-            color: #f85c37;
+        .lm-head:hover {
+            background: #f85c37;
         }
         
     .lm-body {
@@ -1227,6 +1226,7 @@
     
         .lm-button {
             padding: 4px 10px;
+            cursor: default;
         }
         
         .lm-button a {
