--- a/purple-pill/templates/instances.html
+++ b/purple-pill/templates/instances.html
@@ -4,8 +4,10 @@
     </div>
     <div class="lm-body" ng-if="data.localmenu.instances">
         <div class="lm-button" ng-class="{'inactive': !data.canAddInstance()}" ng-mouseup="data.addInstance()">New</div>
+        <div class="lm-button" ng-class="{'inactive': !data.currentInstance}" ng-mouseup="duplicateInstance()">Duplicate</div>
         <div class="lm-divider"></div>
-        <div class="lm-button" ng-class="{'inactive': !data.currentInstance}" ng-mouseup="deleteInstance()">Delete...</div>
+        <div class="lm-button" ng-class="{'inactive': !data.currentInstance}" ng-mouseup="deleteInstance()">Delete</div>
+        
     </div>
 </localmenu>
 
@@ -14,7 +16,7 @@
         <span class="list-sequence-col" ng-class="{'start' : $first && !$last, 'end' : $last && !$first, 'middle' : $middle, 'solo' : $first && $last, 'currentinstance': instance == data.currentInstance}">
             <div class="diamond"></div>
         </span>
-        <span class="list-view-col rename" ng-model="instance.ag" ng-click="instance.display = !instance.display" ng-class="{'selected': instance.display}" style="font-family:'{{instance.fontFamily}}'; font-weight:{{instance.fontWeight}};"></span>
+        <span class="list-view-col rename" ng-model="instance.ag" ng-click="toggleDisplay(instance)" ng-class="{'selected': instance.display}" style="font-family:'{{instance.fontFamily}}'; font-weight:{{instance.fontWeight}};"></span>
         <span class="list-edit-col rename" ng-model="instance.name" ng-click="setCurrentInstance(instance)" ng-class="{'selected': instance.edit}"></span>
     </li>
 </ul>
