--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -374,14 +374,14 @@
     
         #specimen-toolbar {
             overflow: auto;
-            height: 54px;
-            padding: 16px;
+            height: 38px;
+            padding: 8px;
             border-bottom: 1px solid #ddd;
             z-index: 1000;
         }
         
         #specimen-content {
-            height: calc(100% - 54px);
+            height: calc(100% - 38px);
             overflow-y: auto;
             padding: 16px;
             position: relative;
@@ -398,6 +398,11 @@
                width: 38px;
                margin-right: 3px;
                text-align: right;
+               border: 0;
+           }
+           
+           #lineheigt-nr {
+               border: 0;
            }
            
            #filter {
@@ -777,15 +782,22 @@
         height: 100%;
         display: block;
     }
+    
+        #masters-list {
+            height: calc(100% - 63px);
+            overflow: auto;
+        }
 
         masters ul {
             list-style: none;     
             margin: 0;
             padding: 0;
+            
         }
             
         #masters-tools {
             position: absolute;
+            background: #fff;
             bottom: 4px;
             left: 0;
             width: 100%;
