--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -49,10 +49,10 @@
         <span>{{data.projectName}}</span>
     </div>
     <div ng-repeat="sequence in data.sequences">
-        <div class="inspector-branche" style="display: block" ng-repeat="master in sequence.masters"  ng-if="master.edit && master.type != 'test'">
+        <div class="inspector-branche" style="display: block" ng-repeat="master in sequence.masters"  ng-if="master.edit[data.viewState] && master.type != 'test'">
             <div class="inspector-header">
                 <arrow></arrow>
-                <span ng-class="{'inspector-inactive' : !master.edit}">{{master.name}}</span>
+                <span ng-class="{'inspector-inactive' : !master.edit[data.viewState]}">{{master.name}}</span>
             </div>
             <div class="inspector-branche" ng-repeat="glyph in master.glyphs" ng-if="glyph.edit">
                 <div class="inspector-header">
