#343 show/hide parameters panel

--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -1,29 +1,33 @@
 <div id="parameters-selection">
-    <div class="parameters-selection-head">Master</div><div class="parameters-add" ng-click="parametersWindow($event, 1, 'master')">+</div>
-    <div class="parameters-selection-body">
-        <div ng-repeat="parameter in filteredMasterParameters=(data.sequences | mastersInEditFilter)" class="parameter-row">
-            <div class="parameter-operation-row" ng-repeat="operator in parameter.operations">
-                <div class="parameter-key"><span ng-if="$index == 0">{{parameter.name}}</span></div>
-                <div class="parameter-operator">{{operator.operator}}</div>
-                <div class="parameter-value"><input ng-model="operator.value" ng-change="editParameter(parameter.name, operator.operatorer, operator.value)" class="ng-input-focus"></div>
+    <div id="parameters-of-master" ng-if="areMastersSelected()">
+        <div class="parameters-selection-head">Master</div><div class="parameters-add" ng-click="parametersWindow($event, 1, 'master')">+</div>
+        <div class="parameters-selection-body">
+            <div ng-repeat="parameter in filteredMasterParameters=(data.sequences | mastersInEditFilter)" class="parameter-row">
+                <div class="parameter-operation-row" ng-repeat="operator in parameter.operations">
+                    <div class="parameter-key"><span ng-if="$index == 0">{{parameter.name}}</span></div>
+                    <div class="parameter-operator">{{operator.operator}}</div>
+                    <div class="parameter-value"><input ng-model="operator.value" ng-change="editParameter(parameter.name, operator.operatorer, operator.value)" class="ng-input-focus"></div>
+                </div>
             </div>
         </div>
     </div>
     
-    <div class="parameters-selection-head">Glyph</div><div class="parameters-add" ng-click="parametersWindow($event, 2, 'glyph')">+</div>
-    <div class="parameters-selection-body">
-        <div ng-repeat="parameter in filteredGlyphParameters" class="parameter-row">
-            <div class="parameter-operation-row" ng-repeat="operator in parameter.operations">
-                <div class="parameter-key"><span ng-if="$index == 0">{{parameter.name}}</span></div>
-                <div class="parameter-operator">{{operator.operator}}</div>
-                <div class="parameter-value">
-                    <input ng-model="operator.low" ng-blur="editParameter(parameter, operator)" class="ng-input-focus align-right"><span ng-if="operator.range" > to <input ng-model="operator.high" ng-blur="editParameter(parameter, operator)" class="ng-input-focus"></span>
+    <div id="parameters-of-glyph" ng-if="areGlyphsSelected()">
+        <div class="parameters-selection-head">Glyph</div><div class="parameters-add" ng-click="parametersWindow($event, 2, 'glyph')">+</div>
+        <div class="parameters-selection-body">
+            <div ng-repeat="parameter in filteredGlyphParameters" class="parameter-row">
+                <div class="parameter-operation-row" ng-repeat="operator in parameter.operations">
+                    <div class="parameter-key"><span ng-if="$index == 0">{{parameter.name}}</span></div>
+                    <div class="parameter-operator">{{operator.operator}}</div>
+                    <div class="parameter-value">
+                        <input ng-model="operator.low" ng-blur="editParameter(parameter, operator)" class="ng-input-focus align-right"><span ng-if="operator.range" > to <input ng-model="operator.high" ng-blur="editParameter(parameter, operator)" class="ng-input-focus"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="parameter-operation-row" ng-if="hasInheritance(parameter)">
-                <div class="parameter-key"></div>
-                <div class="parameter-operator">-></div>
-                <div class="parameter-value"><span class="calculated-value">{{calculatedValue(parameter)}}</span></div>
+                <div class="parameter-operation-row" ng-if="hasInheritance(parameter)">
+                    <div class="parameter-key"></div>
+                    <div class="parameter-operator">-></div>
+                    <div class="parameter-value"><span class="calculated-value">{{calculatedValue(parameter)}}</span></div>
+                </div>
             </div>
         </div>
     </div>
