--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -29,10 +29,10 @@
 </div>
 
 <div id="masters-tools">
-    <div id="import-ufo" ng-click="importUfo();" class="master-tool">
+    <div id="import-ufo" ng-click="importUfo();" class="master-tool push-button">
         <img src="img/importUfo.png">
     </div>
-    <div id="duplicate-master" ng-click="duplicateMaster();" class="master-tool">
+    <div id="duplicate-master" ng-click="duplicateMaster();" class="master-tool push-button">
         <img src="img/duplicateMaster.png">
     </div>
 </div>
