--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -1131,7 +1131,7 @@
                 cursor: default;
             }
             
-                .control-panel-button.selected {
+                .control-panel-button.selected, .control-panel-button.push-button-down {
                     background: #60BFEF;
                 }
             
