--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -173,6 +173,7 @@
 			.panel {
 				float: left;
                 height: 100%;
+                position: relative;
 			}
 			
 			.sub-panel {
@@ -1402,4 +1403,31 @@
         divider:hover {
             background: #d7d2c8;
             border-left: 1px dashed #fff;
+        }
+
+    dividerHor {
+        position: absolute;
+        top: 0;
+        z-index: 100;
+        height: 4px;
+        width: 100%;
+        background: transparent;
+        cursor: ns-resize;
+        padding: 0 30px;
+        border-top: 1px solid transparent;
+    }
+    
+    dividerHor:after {
+        position: absolute;
+        top: -4px;
+        left: 0;
+        content: " ";
+        height: 3px;
+        width: 100%;
+        background: #d7d2c8;
+    }
+    
+        dividerHor:hover {
+            background: #d7d2c8;
+            border-top: 1px dashed #fff;
         }
