--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -1,3 +1,30 @@
+<input ng-model="data.overallWidth" ng-change="data.scale('overallWidth', data.overallWidth)"> width<br>
+<input ng-model="data.xTranslate" ng-change="data.scale('xTranslate', data.xTranslate)"> xTrans<br>
+<input ng-model="data.yTranslate" ng-change="data.scale('yTranslate', data.yTranslate)"> yTrans<br>
+<input ng-model="data.heightFactor" ng-change="data.scale('heightFactor', data.heightFactor)"> height<br>
+<button ng-click="data.addRule()">+</button>
+
+
+<div id="inspector">
+    <div class="inspector-header">
+        <span>{{data.projectName}}</span>
+    </div>
+    <div ng-repeat="sequence in data.sequences">
+        <div class="inspector-branche" style="display: block" ng-repeat="master in sequence.masters"  ng-if="master.edit[data.viewState] && master.type != 'test'">
+            <div class="inspector-header">
+                <arrow></arrow>
+                <span ng-class="{'inspector-inactive' : !master.edit[data.viewState]}">{{master.name}}</span>
+            </div>
+            <div class="inspector-branche" ng-repeat="glyph in master.glyphs" ng-if="glyph.edit">
+                <div class="inspector-header">
+                    <arrow></arrow>
+                    <span>{{glyph.value}}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div id="parameters-selection">
     <div id="parameters-of-master" ng-if="areMastersSelected()">
         <div class="parameters-selection-head">Master</div><div class="parameters-add" ng-click="parametersWindow($event, 1, 'master')">+</div>
@@ -48,22 +75,3 @@
 
 <div id="parameter-slider"></div>
 
-<div id="inspector">
-    <div class="inspector-header">
-        <span>{{data.projectName}}</span>
-    </div>
-    <div ng-repeat="sequence in data.sequences">
-        <div class="inspector-branche" style="display: block" ng-repeat="master in sequence.masters"  ng-if="master.edit[data.viewState] && master.type != 'test'">
-            <div class="inspector-header">
-                <arrow></arrow>
-                <span ng-class="{'inspector-inactive' : !master.edit[data.viewState]}">{{master.name}}</span>
-            </div>
-            <div class="inspector-branche" ng-repeat="glyph in master.glyphs" ng-if="glyph.edit">
-                <div class="inspector-header">
-                    <arrow></arrow>
-                    <span>{{glyph.value}}</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
